--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    ul ul {
+        padding-left: 40px
+
+    }
+
+}
